changed h3 with p for acceccibility

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img class="float" src="./assets/img/male1.png" alt="male1">
 
                     <div class="float scheda">
-                    <h3>MARCO BIANCHI</h3>
+                    <p class="name">MARCO BIANCHI</p>
                     <p>Designer</p>
                     <a href="mailto:marcobianco@team.com">marcobianco@team.com</a>
                 </div>
@@ -43,7 +43,7 @@
                 <div class="row">
                     <img class="float " src="./assets/img/female1.png" alt="male1">
                       <div class="float scheda">
-                        <h3>LAURA ROSSI</h3> 
+                        <p class="name">LAURA ROSSI</p> 
                         <p>Front-end Developer</p>
                        <a href="mailto:laurarossi@team.com">laurarossi@team.com</a>
                     </div>
@@ -53,7 +53,7 @@
                 <div class="row">
                     <img class="float" src="./assets/img/male2.png" alt="male1">
                     <div class="float scheda">
-                        <h3>GIORGIO VERDI</h3>
+                        <p class="name">GIORGIO VERDI</p>
                         <p>Back-end Developer</p>
                         <a href="mailto:giorgioverdi@team.com">giorgioverdi@team.com</a>
                     </div>
@@ -77,7 +77,7 @@
                 <img class="float" src="./assets/img/female2.png" alt="male1">
 
                 <div class="float scheda">
-                <h3>MARTA IPSUM</h3>
+                <p class="name">MARTA IPSUM</p>
                 <p>SEO Specialist</p>
                 <a href="mailto:marcobianco@team.com">marcobianco@team.com</a>
             </div>
@@ -90,7 +90,7 @@
             <div class="row">
                 <img class="float " src="./assets/img/male3.png" alt="male1">
                   <div class="float scheda">
-                    <h3>ROBERTO LOREM</h3> 
+                    <p class="name">ROBERTO LOREM</p> 
                     <p>Project Manager</p>
                    <a href="mailto:laurarossi@team.com">laurarossi@team.com</a>
                 </div>
@@ -100,7 +100,7 @@
             <div class="row">
                 <img class="float" src="./assets/img/female3.png" alt="male1">
                 <div class="float scheda">
-                    <h3>DANIELA AMET</h3>
+                    <p class="name">DANIELA AMET</p>
                     <p>Analyst</p>
                     <a href="mailto:giorgioverdi@team.com">giorgioverdi@team.com</a>
                 </div>
